# filesystem-api

./: .gitignore  CHANGELOG.rst  Dockerfile  README.rst  bootstrap  pyproject.toml
.github/workflows/: ci.yaml
.kustomization/: README.rst
.kustomization/base/: kustomization.yaml  psp.yaml  rbac.yaml  sa.yaml
.kustomization/components/api/: cm.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  svc.yaml
.kustomization/overlays/dev/: kustomization.yaml
.kustomization/overlays/dev/ingress/: api.yaml
.kustomization/overlays/prd/: kustomization.yaml
.kustomization/overlays/prd/configs/: base.yaml
.kustomization/overlays/prd/ingress/: api.yaml
etc/: nslcd.conf  nsswitch.conf
samples/: client.py
src/: __init__.py  app.py
src/api/: auth.py  file_manager.py  filemgr.py  filesystem.py
src/resources/: auth.py  file_manager.py  filesystem.py
src/schemas/deserializers/: filemgr.py
src/schemas/serializers/: filemgr.py
src/schemas/serlializers/: filemgr.py
src/services/: auth.py  file_manager.py  filemgr.py  filesystem.py
src/settings/: config.py  oas.py
src/utils/: __init__.py
tests/functional/: conftest.py  test_app.py  test_filemgr.py  test_filesystem.py
tests/unit/: test_auth.py  test_filemgr.py  test_filesystem.py  test_utils.py
