[tool.poetry]
name = "filesystem-api"
version = "0.1.0"
description = "A RESTful API for CRUD operations over files in current filesystem."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "LICENSE"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/rena2damas/filesystem-api"
documentation = ""
keywords = [
    "filesystem-api",
    "file-manager",
    "syncfusion",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = { extras = ["marshmallow", "yaml"], version = "^5.1.1" }
apispec-plugins = "^0.1.3"
apispec-ui = "^0.1.3"
Flask = "^2.1.0"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pre-commit = "^2.17.0"
pyfakefs = "^4.5.6"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
